# little-printer

./: .gitignore  CMakeLists.txt  README.md  SPEC.md  diagnostic-firmware-spec.md  sdkconfig.defaults
.github/workflows/: ci.yml  release.yml
components/thermal_printer/: CMakeLists.txt  thermal_printer.c
components/thermal_printer/include/: thermal_printer.h
diag/: CMakeLists.txt  sdkconfig.defaults
diag/main/: main.c
docs/superpowers/plans/: 2026-04-23-diagnostic-firmware.md  2026-04-26-briefing-firmware.md  2026-04-26-mc206h-printer-migration.md  2026-04-27-hourly-message-poll.md  2026-04-27-printer-status-feedback.md  2026-04-27-public-message-queue.md  2026-06-20-printer-case.md
docs/superpowers/specs/: 2026-04-26-mc206h-printer-migration-design.md  2026-04-27-form-mobile-polish-design.md  2026-04-27-hourly-message-poll-design.md  2026-04-27-printer-status-feedback-design.md  2026-04-27-public-message-queue-design.md  2026-06-20-printer-case-design.md
fly-message-queue/: .dockerignore  .gitignore  Dockerfile  db.go  db_test.go  fly.toml  go.mod  handlers.go  handlers_test.go  main.go  validate.go  validate_test.go
fly-message-queue/templates/: index.html
host_tests/: README.md  test_text_wrap.c  test_weather_code.c
main/: CMakeLists.txt  Kconfig.projbuild  briefing.c  briefing.h  config.h  http_fetch.c  http_fetch.h  main.c  messages.c  messages.h  printer_lock.c  printer_lock.h  quote.c  quote.h  text_wrap.c  text_wrap.h  time_sync.c  time_sync.h  weather.c  weather.h  wifi.c  wifi.h
