idf_component_register(
    SRCS
        "main.c"
        "wifi.c"
        "time_sync.c"
        "http_fetch.c"
        "weather.c"
        "quote.c"
        "text_wrap.c"
        "briefing.c"
        "messages.c"
    INCLUDE_DIRS "."
    REQUIRES
        esp_wifi
        esp_netif
        esp_event
        nvs_flash
        esp_http_client
        esp-tls
        json
        driver
        thermal_printer
)
